tests/NormalTests/paczka1/fuzzy1/44369428.err
Error in line 3: xOyQfLszf A670 32,9
Error in line 9: 32pv S590 85,1
Error in line 14: M8mlvwqB A670 45,3
Error in line 29: M8mlvwqB A623 41,1
